# tree-vs-cat-smart-contract

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  VERIFICATION.md
programs/tic_world/: Cargo.toml
programs/tic_world/src/: lib.rs
