[package]
name = "tic_world"
version = "0.1.0"
description = "TIC World - Tree in Cat on-chain game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tic_world"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
rarity-model = { path = "../../../../packages/rarity-model", default-features = false }
